[gd_scene load_steps=4 format=3 uid="uid://b5d061k44u266"]

[ext_resource type="Texture2D" uid="uid://bn3sdmo2rsle8" path="res://Sprites/Tasks/Task 5/Trash item/1.png" id="1_3mwjo"]
[ext_resource type="Script" path="res://Storyline/8_Task 5/scripts/trash.gd" id="2_33dp2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l57g8"]

[node name="Trash" type="Sprite2D"]
position = Vector2(294, 433)
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_3mwjo")
script = ExtResource("2_33dp2")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(28, 20)
rotation = -0.523598
scale = Vector2(13.6061, 5.41675)
shape = SubResource("CircleShape2D_l57g8")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
